[project]
name = "viphys"
version = "0.1.0"
description = "Visual Physical via Manim(GL)"
readme = "README.MD"
requires-python = "==3.13.2"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.50",
]
